--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Miloš Simić</title>
         <meta charset="utf-8">
-        <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+        <link href="../assets/css/style.css" type="text/css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -25,6 +25,6 @@
         </section>
         
         <!--Include later in head, change JS-->
-        <script src="assets/js/main.js"></script>
+        <script src="../assets/js/main.js"></script>
     </body>
 </html>
