--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <title>Miloš Simić</title>
         <meta charset="utf-8">
-        <link href="../assets/css/style.css" type="text/css" rel="stylesheet">
+        <link href="assets/css/style.css" type="text/css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -13,7 +13,7 @@
             <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
             <h1>About me</h1>
             <div class="about-content">
-                <div><img src = "../assets/pictures/ja.png"></div>
+                <div><img src = "assets/pictures/ja.png"></div>
                 <div class="list-1"><span>Skills</span><br>
                     <ul>
                         <li>HTML</li>
@@ -45,6 +45,6 @@
         </section>
         
         <!--Include later in head, change JS-->
-        <script src="../assets/js/about.js"></script>
+        <script src="assets/js/about.js"></script>
     </body>
 </html>
