--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <title>Miloš Simić</title>
         <meta charset="utf-8">
-        <link href="../assets/css/style.css" type="text/css" rel="stylesheet">
+        <link href="assets/css/style.css" type="text/css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -15,37 +15,37 @@
             <div class="project-list">
                 <div>
                     <a target="_blank" href="https://sten.co.rs">
-                        <img src="../pictures50/sten50.png" alt="sten-website">
+                        <img src="pictures50/sten50.png" alt="sten-website">
                     </a>
                     <figcaption>Website for company STEN d.o.o</figcaption>
                 </div>
                 <div>
                     <a target="_blank" href="#">
-                        <img src="../pictures50/todo50.png" alt="to-do-list">
+                        <img src="pictures50/todo50.png" alt="to-do-list">
                     </a>
                     <figcaption>ToDo app - HTML, CSS, Javascript</figcaption>
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/VybNgj">
-                        <img src="../pictures50/quotegenerator50.png" alt="quote-generator">
+                        <img src="pictures50/quotegenerator50.png" alt="quote-generator">
                     </a>
                     <figcaption>Random quote generator - HTML, CSS, jQuery</figcaption>
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/KZyPBe">
-                        <img src="../pictures50/weatherapp50.png" alt="current-weather-app">
+                        <img src="pictures50/weatherapp50.png" alt="current-weather-app">
                     </a>
                     <figcaption>Weather app - HTML, CSS, fetch API (JS)</figcaption>
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/eyMNrG">
-                        <img src="../pictures50/wikipediasearch50.png" alt="wikipedia-search">
+                        <img src="pictures50/wikipediasearch50.png" alt="wikipedia-search">
                     </a>
                     <figcaption>Wikipedia search - HTML, CSS, fetch API (JS)</figcaption>
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/ddVrEB">
-                        <img src="../pictures50/currentbitcoin50.png" alt="bitcoin-price">
+                        <img src="pictures50/currentbitcoin50.png" alt="bitcoin-price">
                     </a>
                     <figcaption>Current BitCoin price - HTML, CSS, fetch API (JS)</figcaption>
                 </div>
@@ -61,6 +61,6 @@
         </section>
         
         <!--Include later in head, change JS-->
-        <script src="../assets/js/projects.js"></script>
+        <script src="assets/js/projects.js"></script>
     </body>
 </html>
