--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
                     <figcaption>Website for company STEN d.o.o</figcaption>
                 </div>
                 <div>
-                    <a target="_blank" href="#">
+                    <a target="_blank" href="https://msimicshauma.github.io/one-time-to-do-list/index.html">
                         <img src="pictures50/todo50.png" alt="to-do-list">
                     </a>
                     <figcaption>ToDo app - HTML, CSS, Javascript</figcaption>
