--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <section class="landing">
             <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
             <h1>Hello, I'm Miloš!</h1>
-            <p class="title">FRONT-END DEVELOPER: <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></p>
+            <p class="title">FRONT-END DEVELOPER</p>
+            <!--: <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>-->
             <hr>
         </section>
         
