--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
             <h1>Contact</h1>
             <h2>Miloš Simić</h2>
-            <h2>e-mail: simicmv@icloud.com</h2>
+            <h2><span>e-mail</span><br> simicmv@icloud.com</h2>
         </section>
         
         <section class="menu">
