--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="about-me">
-                <p>Hi, I'm Miloš Simić, a self taught front-end developer from Belgrade, Serbia. I love this profession since it mixes design and coding. My goal is to implement clean and minimal design wherever it's possible without loosing functionality. Speed is always welcome!</p>
+                <p>Hi, I'm Miloš Simić, a self taught front-end developer from Belgrade, Serbia. I love this profession since it mixes design and coding. My goal is to implement clean and minimal design wherever it's possible without losing functionality. Speed is always welcome!</p>
             </div>
         </section>
         
