--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                         <li>CSS</li>
                         <li>Responsive design</li>
                         <li>Javascript</li>
+                        <li>Git</li>
                     </ul>
                 </div>
                 <div class="list-2"><span>Familiar with</span><br>
