--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     
     <body>
         <section class="contact">
-            <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
+            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
+            <span id="menu-open">MORE</span>
             <h1>Contact</h1>
             <h2>Miloš Simić</h2>
             <h2><span>e-mail</span><br> simicmv@icloud.com</h2>
