--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <body>
         <section class="landing">
-            <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
+            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
+            <span id="menu-open">MORE</span>
             <h1>Hello, I'm Miloš!</h1>
             <p class="title">FRONT-END DEVELOPER</p>
             <!--: <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>-->
