--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,8 @@
     
     <body>
         <section class="projects">
-            <i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>
+            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
+            <span id="menu-open">MORE</span>
             <h1>Projects</h1>
             <div class="project-list">
                 <div>
