Fixed font-size, changed more button to hamburger and minor margin, padding fixes

--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
     
     <body>
         <section class="contact">
-            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
-            <span id="menu-open">MORE</span>
+            <i class="fa fa-align-right" aria-hidden="true" id="menu-open"></i>
+            <!--<span id="menu-open">MORE</span>-->
             <h1>Contact</h1>
-            <h2>Miloš Simić</h2>
-            <h2><span>e-mail</span><br> simicmv@icloud.com</h2>
+            <h2><span>Name</span><br>Miloš Simić</h2>
+            <h2><span>e-mail</span><br>simicmv@icloud.com</h2>
         </section>
         
         <section class="menu">
