--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     
     <body>
         <section class="landing">
-            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
-            <span id="menu-open">MORE</span>
+            <i class="fa fa-align-right" aria-hidden="true" id="menu-open"></i>
             <h1>Hello, I'm Miloš!</h1>
             <p class="title">FRONT-END DEVELOPER</p>
             <!--: <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>-->
