--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     
     <body>
         <section class="about">
-            <!--<i class="fa fa-align-right fa-2x" aria-hidden="true" id="menu-open"></i>-->
-            <span id="menu-open">MORE</span>
+            <i class="fa fa-align-right" aria-hidden="true" id="menu-open"></i>
+            <!--<span id="menu-open">MORE</span>-->
             <h1>About me</h1>
             <div class="about-content">
                 <div><img src = "assets/pictures/ja.png"></div>
