Added new project to projects list

--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,12 @@
             <h1>Projects</h1>
             <div class="project-list">
                 <div>
+                    <a target="_blank" href="https://msimicshauma.github.io/company-template-one/">
+                        <img src="pictures50/responsiveTemplate50.png" alt="sten-website">
+                        <figcaption>Simple responsive template for companies</figcaption>
+                    </a>
+                </div>
+                <div>
                     <a target="_blank" href="https://sten.co.rs">
                         <img src="pictures50/sten50.png" alt="sten-website">
                         <figcaption>Website for company STEN d.o.o</figcaption>
