Edited project list

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,12 @@
                     </a>
                 </div>
                 <div>
+                    <a target="_blank" href="https://msimicshauma.github.io/company-template-two/">
+                        <img src="pictures50/companyTemplateTwo50.png" alt="current-weather-app">
+                        <figcaption>Another simple responsive template</figcaption>
+                    </a>           
+                </div>
+                <div>
                     <a target="_blank" href="https://msimicshauma.github.io/one-time-to-do-list/index.html">
                         <img src="pictures50/todo50.png" alt="to-do-list">
                         <figcaption>ToDo app - HTML, CSS, Javascript</figcaption>
@@ -37,12 +43,6 @@
                         <img src="pictures50/quotegenerator50.png" alt="quote-generator">
                         <figcaption>Random quote generator - HTML, CSS, jQuery</figcaption>
                     </a>   
-                </div>
-                <div>
-                    <a target="_blank" href="https://codepen.io/msimic/pen/KZyPBe">
-                        <img src="pictures50/weatherapp50.png" alt="current-weather-app">
-                        <figcaption>Weather app - HTML, CSS, fetch API (JS)</figcaption>
-                    </a>           
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/eyMNrG">
