updated portfolio and changed profile picture

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <!--<span id="menu-open">MORE</span>-->
             <h1>About me</h1>
             <div class="about-content">
-                <div><img src = "assets/pictures/ja.png"></div>
+                <div><img src = "assets/pictures/ja2.png"></div>
                 <div class="list-1"><span>Skills</span><br>
                     <ul>
                         <li>HTML</li>
@@ -26,6 +26,7 @@
                 </div>
                 <div class="list-2"><span>Familiar with</span><br>
                     <ul>
+                        <li>React</li>
                         <li>jQuery</li>
                         <li>Bootstrap</li>
                         <li>SASS</li>
