--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
             <h1>Projects</h1>
             <div class="project-list">
                 <div>
-                    <a target="_blank" href="https://msimicshauma.github.io/company-template-one/">
-                        <img src="pictures50/responsiveTemplate50.png" alt="sten-website">
-                        <figcaption>Simple responsive template for companies</figcaption>
+                    <a target="_blank" href="https://aluipvcstolarija.rs/">
+                        <img src="pictures50/slozna-braca50.png" alt="slozna-braca">
+                        <figcaption>Website for company Stolarija Složna Braća</figcaption>
                     </a>
                 </div>
                 <div>
@@ -27,10 +27,28 @@
                     </a>
                 </div>
                 <div>
+                    <a target="_blank" href="https://github.com/chingu-voyage5/Geckos-Team-30">
+                        <img src="pictures50/react-app50.png" alt="react-app">
+                        <figcaption>React app that shows content from APIs</figcaption>
+                    </a>
+                </div>
+                <div>
+                    <a target="_blank" href="https://msimicshauma.github.io/company-template-one/">
+                        <img src="pictures50/responsiveTemplate50.png" alt="sten-website">
+                        <figcaption>Simple responsive template for companies</figcaption>
+                    </a>
+                </div>
+                <div>
                     <a target="_blank" href="https://msimicshauma.github.io/company-template-two/">
                         <img src="pictures50/companyTemplateTwo50.png" alt="current-weather-app">
                         <figcaption>Another simple responsive template</figcaption>
                     </a>           
+                </div>
+                <div>
+                    <a target="_blank" href="https://msimicshauma.github.io/grid-template/">
+                        <img src="pictures50/app-landing50.png" alt="grid-template">
+                        <figcaption>App landing page - CSS grid</figcaption>
+                    </a>
                 </div>
                 <div>
                     <a target="_blank" href="https://msimicshauma.github.io/one-time-to-do-list/index.html">
