changed link to react app in project list

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div>
-                    <a target="_blank" href="https://github.com/chingu-voyage5/Geckos-Team-30">
+                    <a target="_blank" href="https://chingu-voyage5.github.io/Geckos-Team-30">
                         <img src="pictures50/react-app50.png" alt="react-app">
                         <figcaption>React app that shows content from APIs</figcaption>
                     </a>
