added links to github and linkedin to main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <section class="landing">
             <i class="fa fa-align-right" aria-hidden="true" id="menu-open"></i>
             <h1>Hello, I'm Miloš!</h1>
-            <p class="title">FRONT-END DEVELOPER</p>
+            <p class="title">FRONT-END DEVELOPER | 
+                <a href="https://www.linkedin.com/in/simicmv/" target="_blank"><i class="fa fa-linkedin-square"></i></a> 
+                <a href="https://github.com/msimicshauma" target="_blank"><i class="fa fa-github"></i></a>
+            </p>
             <!--: <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>-->
             <hr>
         </section>
