removed quote generator project, added online shop template to project list

--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,12 @@
                     </a>
                 </div>
                 <div>
+                    <a target="_blank" href="https://msimicshauma.github.io/online-shop/">
+                        <img src="pictures50/online-shop50.png" alt="online-shop-template">
+                        <figcaption>Online shop template - React</figcaption>
+                    </a>   
+                </div>
+                <div>
                     <a target="_blank" href="https://sten.co.rs">
                         <img src="pictures50/sten50.png" alt="sten-website">
                         <figcaption>Website for company STEN d.o.o</figcaption>
@@ -55,12 +61,6 @@
                         <img src="pictures50/todo50.png" alt="to-do-list">
                         <figcaption>ToDo app - HTML, CSS, Javascript</figcaption>
                     </a>
-                </div>
-                <div>
-                    <a target="_blank" href="https://codepen.io/msimic/pen/VybNgj">
-                        <img src="pictures50/quotegenerator50.png" alt="quote-generator">
-                        <figcaption>Random quote generator - HTML, CSS, jQuery</figcaption>
-                    </a>   
                 </div>
                 <div>
                     <a target="_blank" href="https://codepen.io/msimic/pen/eyMNrG">
