updated project list

--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
                         <li>Responsive design</li>
                         <li>Javascript</li>
                         <li>React</li>
+                        <li>NodeJS</li>
+                        <li>MongoDB</li>
                         <li>Git</li>
                     </ul>
                 </div>
@@ -35,7 +37,7 @@
                 </div>
             </div>
             <div class="about-me">
-                <p>Hi, I'm Miloš Simić, a self taught front-end developer from Belgrade, Serbia. I love this profession since it mixes design and coding. My goal is to implement clean and minimal design wherever it's possible without losing functionality. Speed is always welcome!</p>
+                <p>Hi, I'm Miloš Simić, a web developer from Belgrade, Serbia. My goal is to create fast web sites/web apps that are also well designed.</p>
             </div>
         </section>
         
