--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,12 @@
                     </a>   
                 </div>
                 <div>
+                    <a target="_blank" href="https://tranquil-crag-27281.herokuapp.com/">
+                        <img src="pictures50/project50.png" alt="practice">
+                        <figcaption>Practice project with 20 users, their info and friend suggestions (MERN)</figcaption>
+                    </a>   
+                </div>
+                <div>
                     <a target="_blank" href="https://sten.co.rs">
                         <img src="pictures50/sten50.png" alt="sten-website">
                         <figcaption>Website for company STEN d.o.o</figcaption>
@@ -60,12 +66,6 @@
                     <a target="_blank" href="https://msimicshauma.github.io/one-time-to-do-list/index.html">
                         <img src="pictures50/todo50.png" alt="to-do-list">
                         <figcaption>ToDo app - HTML, CSS, Javascript</figcaption>
-                    </a>
-                </div>
-                <div>
-                    <a target="_blank" href="https://codepen.io/msimic/pen/eyMNrG">
-                        <img src="pictures50/wikipediasearch50.png" alt="wikipedia-search">
-                        <figcaption>Wikipedia search - HTML, CSS, fetch API (JS)</figcaption>
                     </a>
                 </div>
             </div>
