updated project list

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,12 @@
                     </a>   
                 </div>
                 <div>
+                    <a target="_blank" href="https://vast-tor-49990.herokuapp.com/">
+                        <img src="pictures50/mern50.png" alt="mern-skeleton-app">
+                        <figcaption>Base app - MERN</figcaption>
+                    </a>
+                </div>
+                <div>
                     <a target="_blank" href="https://tranquil-crag-27281.herokuapp.com/">
                         <img src="pictures50/project50.png" alt="practice">
                         <figcaption>Practice project with 20 users, their info and friend suggestions (MERN)</figcaption>
@@ -55,12 +61,6 @@
                         <img src="pictures50/companyTemplateTwo50.png" alt="current-weather-app">
                         <figcaption>Another simple responsive template</figcaption>
                     </a>           
-                </div>
-                <div>
-                    <a target="_blank" href="https://msimicshauma.github.io/grid-template/">
-                        <img src="pictures50/app-landing50.png" alt="grid-template">
-                        <figcaption>App landing page - CSS grid</figcaption>
-                    </a>
                 </div>
                 <div>
                     <a target="_blank" href="https://msimicshauma.github.io/one-time-to-do-list/index.html">
